# i3-notifier

./: .gitignore  MANIFEST  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
examples/: i3_notifier_config.py
i3notifier/: config.py  data_manager.py  i3.py  main.py  notification.py  notification_fetcher.py  rofi_gui.py  switch_to_urgent.py  user_config.py  utils.py
i3notifier/rofi-theme/: common.rasi  sidebar.rasi  widget.rasi
tests/: test_data_manager.py  test_notification.py
